Remove service worker | Fix navigation on 1890 timeline date | Add some timeline features Service worker caching problems is unneccesary until app goes live | 1890 Navigation icons were not meant to be visible on timeline | Added timeline counter Solution Note

--- a/src/components/02-teaser/slider/slider.scss
+++ b/src/components/02-teaser/slider/slider.scss
@@ -17,8 +17,12 @@
 // =========================
 
 .icon {
-  fill: #6B7A8F;
+  fill: #3acce1;
+  opacity: 0.75;
   width: 100%;
+  &:hover {
+    fill: #353a50;
+  }
 }
 
 
@@ -32,7 +36,7 @@
   display: flex;
   justify-content: center;
   position: absolute;
-  top: calc(100% + 0.5rem);
+  top: calc(100%);
   width: 100%;
   z-index: 10;
   
@@ -48,15 +52,12 @@
     height: var(--size);
     padding: 0;
     width: var(--size);
-    
-    &:focus {
-      border-color: var(--color-focus);
-      outline: none;
-    }
         
     &--previous > * {
       transform: rotate(180deg);
     }
+
+
   }
 }
 
